scroll overflow brightness effect fix (smoother)

--- a/new/app/style.scss
+++ b/new/app/style.scss
@@ -295,7 +295,7 @@ body {
     bottom: 0;
     background-color: var(--y-w1);
     opacity: 0;
-    transition: opacity 0.25s cubic-bezier(0.45, 0.9, 0, 1);
+    transition: opacity 3s cubic-bezier(0.05, 0.8, 0, 1);
     pointer-events: none;
     user-select: none;
 }
